@@ -9,3 +9,5 @@ to be worked out.
 * May 16, 2005
 Logarithmic sliders!  So much better.  Why didn't I do this earlier?
 (Applies to Cutoff & Resonance)
+Clicking a folder now sets all filebrowsers to same folder.
+	
